examples/negative/silent_contract/impl_method_signature_mismatch.kai
# Silent contract (#520 audit, category 4 / protocols): the
# `impl P for Box`'s `foo` returns `String`, but `protocol P`
# declares `foo(x: Self) : Int`. The implementation type does
# not match the protocol op's signature and should be rejected.
# kaikai compiles silently.
#
# See examples/negative/silent_contract/README.md for follow-up.

protocol P {
  foo(x: Self) : Int
}

type Box = Box(Int)

impl P for Box {
  fn foo(b: Box) : String = "x"
}

fn main() : Int = foo(Box(1))
